--- a/src/i18n/common.en.json
+++ b/src/i18n/common.en.json
@@ -1,11 +1,6 @@
 {
-	"elemento1": {
-		"descripcion": "Element 1"
-	},
-	"elemento2": {
-		"descripcion": "Element 2"
-	},
-	"elemento3": {
-		"descripcion": "Element 3"
-	}
+	"only_for_battle": "Only for battle",
+	"search": "Search...",
+	"name" : "Name",
+	"url" : "Link"
 }
